Cleanup link list of kopageapp

--- a/libs/kopageapp/CMakeLists.txt
+++ b/libs/kopageapp/CMakeLists.txt
@@ -58,9 +58,12 @@ add_library(kopageapp SHARED ${kopageapp_LIB_SRCS})
 generate_export_header(kopageapp
     EXPORT_FILE_NAME kopageapp_generated_export.h)
 
-target_link_libraries(kopageapp komain kotextlayout ${KDE4_KIO_LIBS})
-target_link_libraries(kopageapp LINK_INTERFACE_LIBRARIES komain)
-
+target_link_libraries(kopageapp
+    PUBLIC
+        komain
+    PRIVATE
+        kotextlayout
+)
 set_target_properties(kopageapp PROPERTIES
     VERSION ${GENERIC_CALLIGRA_LIB_VERSION} SOVERSION ${GENERIC_CALLIGRA_LIB_SOVERSION}
 )
