--- a/libs/main/CMakeLists.txt
+++ b/libs/main/CMakeLists.txt
@@ -100,6 +100,7 @@ PRIVATE
     KF5::Notifications
     KF5::ItemViews
     KF5::KIOFileWidgets
+    KF5::IconThemes
 )
 
 if( KF5_Activities_FOUND )
