Port Changecase kDebug -> qCDebug

--- a/plugins/textediting/changecase/CMakeLists.txt
+++ b/plugins/textediting/changecase/CMakeLists.txt
@@ -5,6 +5,7 @@ add_definitions(-DTRANSLATION_DOMAIN=\"calligra_textediting_changecase\")
 include_directories( ${KOWIDGETS_INCLUDES} ${KOTEXT_INCLUDES} )
 
 set(changecase_SRCS
+    ChangecaseDebug.cpp
     ChangecasePlugin.cpp
     Changecase.cpp
     ChangecaseFactory.cpp
