--- a/plugins/textediting/spellcheck/tests/CMakeLists.txt
+++ b/plugins/textediting/spellcheck/tests/CMakeLists.txt
@@ -7,6 +7,7 @@ include_directories( ${CMAKE_SOURCE_DIR}/plugins/textediting/spellcheck
 set(TestSpellCheck_SRCS
     TestSpellCheck.cpp
     ../BgSpellCheck.cpp
+    ../SpellCheckDebug.cpp
 )
 
 kde4_add_unit_test(TestSpellCheck TESTNAME textedit-TestSpellCheck ${TestSpellCheck_SRCS})
