Port VectorShape kDebug -> qCDebug

--- a/plugins/vectorshape/CMakeLists.txt
+++ b/plugins/vectorshape/CMakeLists.txt
@@ -5,6 +5,7 @@ add_definitions(-DTRANSLATION_DOMAIN=\"calligra_shape_vector\")
 include_directories(${FLAKE_INCLUDES} ${VECTORIMAGE_INCLUDES})
 
 set ( VectorShape_SRCS
+    VectorDebug.cpp
     VectorShapePlugin.cpp
     VectorShape.cpp
     VectorShapeConfigWidget.cpp
