--- a/plugins/pictureshape/CMakeLists.txt
+++ b/plugins/pictureshape/CMakeLists.txt
@@ -26,5 +26,10 @@ ki18n_wrap_ui(pictureshape_LIB_SRCS forms/wdgPictureTool.ui)
 add_library(calligra_shape_picture MODULE ${pictureshape_LIB_SRCS})
 kcoreaddons_desktop_to_json(calligra_shape_picture calligra_shape_picture.desktop)
 
-target_link_libraries(calligra_shape_picture flake KF5::I18n KF5::KDELibs4Support)
+target_link_libraries(calligra_shape_picture
+    flake
+    KF5::I18n
+    KF5::KIOFileWidgets
+    KF5::GuiAddons
+)
 install(TARGETS calligra_shape_picture DESTINATION ${CALLIGRA_PLUGIN_INSTALL_DIR})
