--- a/plugins/textediting/changecase/CMakeLists.txt
+++ b/plugins/textediting/changecase/CMakeLists.txt
@@ -14,6 +14,9 @@ set(changecase_SRCS
 add_library(calligra_textediting_changecase MODULE ${changecase_SRCS})
 kcoreaddons_desktop_to_json(calligra_textediting_changecase calligra_textediting_changecase.desktop)
 
-target_link_libraries(calligra_textediting_changecase kotext kowidgets KF5::KDELibs4Support)
+target_link_libraries(calligra_textediting_changecase
+    kotext
+    kowidgets
+)
 
 install(TARGETS calligra_textediting_changecase DESTINATION ${CALLIGRA_PLUGIN_INSTALL_DIR})
