--- a/plugins/textediting/autocorrection/CMakeLists.txt
+++ b/plugins/textediting/autocorrection/CMakeLists.txt
@@ -21,6 +21,8 @@ ki18n_wrap_ui( autocorrect_SRCS
 add_library(calligra_textediting_autocorrect MODULE ${autocorrect_SRCS})
 kcoreaddons_desktop_to_json(calligra_textediting_autocorrect calligra_textediting_autocorrect.desktop)
 
-target_link_libraries(calligra_textediting_autocorrect kowidgets KF5::KDELibs4Support)
+target_link_libraries(calligra_textediting_autocorrect
+    kowidgets
+)
 
 install(TARGETS calligra_textediting_autocorrect DESTINATION ${CALLIGRA_PLUGIN_INSTALL_DIR})
