Use generate_export_header for Stage

--- a/stage/app/CMakeLists.txt
+++ b/stage/app/CMakeLists.txt
@@ -2,6 +2,7 @@ project(stageapp)
 
 include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}/../part
+    ${CMAKE_CURRENT_BINARY_DIR}/../part
     ${KOMAIN_INCLUDES}
     ${KOPAGEAPP_INCLUDES}
 )
