Use StageDebug instead of kdebug in Stage

--- a/stage/part/CMakeLists.txt
+++ b/stage/part/CMakeLists.txt
@@ -9,6 +9,7 @@ add_subdirectory(tools)
 
 ### calligrastageprivate ###
 set( calligrastageprivate_LIB_SRCS
+     StageDebug.cpp
      KPrFactory.cpp
      KPrDocument.cpp
      KPrDeclarations.cpp
