Stage no longer needs KDELibs4Support

--- a/qtquick/CMakeLists.txt
+++ b/qtquick/CMakeLists.txt
@@ -80,6 +80,7 @@ target_link_libraries(calligraqtquickcomponentsplugin
     Qt5::Declarative
     Qt5::OpenGL
     Qt5::Svg
+    KF5::KDELibs4Support
     komain
     kotextlayout
     wordsprivate
