--- a/stage/part/CMakeLists.txt
+++ b/stage/part/CMakeLists.txt
@@ -154,12 +154,20 @@ generate_export_header(calligrastageprivate
     EXPORT_FILE_NAME stage_generated_export.h
 )
 
-target_link_libraries(calligrastageprivate kopageapp kowidgets kotextlayout KF5::Archive Qt5::Svg Qt5::WebKitWidgets KF5::KDELibs4Support)
+target_link_libraries(calligrastageprivate
+    PUBLIC
+        kopageapp
+    PRIVATE
+        kowidgets
+        kotextlayout
+        KF5::Archive
+        KF5::IconThemes
+        Qt5::Svg
+        Qt5::WebKitWidgets
+)
 if(HAVE_OPENGL)
-    target_link_libraries(calligrastageprivate Qt5::OpenGL)
+    target_link_libraries(calligrastageprivate PRIVATE Qt5::OpenGL)
 endif()
-
-target_link_libraries(calligrastageprivate LINK_INTERFACE_LIBRARIES kopageapp KF5::KDELibs4Support)
 
 set_target_properties(calligrastageprivate PROPERTIES VERSION ${GENERIC_CALLIGRA_LIB_VERSION} SOVERSION ${GENERIC_CALLIGRA_LIB_SOVERSION} )
 install(TARGETS calligrastageprivate  ${INSTALL_TARGETS_DEFAULT_ARGS})
