--- a/gemini/CMakeLists.txt
+++ b/gemini/CMakeLists.txt
@@ -83,6 +83,7 @@ target_link_libraries(calligragemini
     Qt5::Gui
     Qt5::Core
     ${GLEW_LIBRARIES}
+    KF5::KDELibs4Support
     komain
     wordsprivate
     calligrastageprivate
