calligra_filter_rtf2odt no longer needs KDELibs4Support

--- a/filters/words/rtf/import/CMakeLists.txt
+++ b/filters/words/rtf/import/CMakeLists.txt
@@ -7,7 +7,7 @@ include_directories(
 set(rtf2odt_PART_SRCS rtfimport.cpp )
 add_library(calligra_filter_rtf2odt MODULE ${rtf2odt_PART_SRCS})
 kcoreaddons_desktop_to_json(calligra_filter_rtf2odt calligra_filter_rtf2odt.desktop)
-target_link_libraries(calligra_filter_rtf2odt RtfReader komain KF5::KDELibs4Support)
+target_link_libraries(calligra_filter_rtf2odt RtfReader komain)
 
 install(TARGETS calligra_filter_rtf2odt  DESTINATION ${CALLIGRA_PLUGIN_INSTALL_DIR})
 
