calligra_filter_ascii2words no longer needs KDELibs4Support

--- a/filters/words/ascii/CMakeLists.txt
+++ b/filters/words/ascii/CMakeLists.txt
@@ -13,7 +13,7 @@ set(ascii2words_PART_SRCS
 ki18n_wrap_ui(ascii2words_PART_SRCS ImportDialogUI.ui )
 add_library(calligra_filter_ascii2words MODULE ${ascii2words_PART_SRCS})
 kcoreaddons_desktop_to_json(calligra_filter_ascii2words calligra_filter_ascii2words.desktop)
-target_link_libraries(calligra_filter_ascii2words komain kotextlayout wordsprivate KF5::KDELibs4Support)
+target_link_libraries(calligra_filter_ascii2words komain kotextlayout wordsprivate KF5::Codecs)
 install(TARGETS calligra_filter_ascii2words DESTINATION ${CALLIGRA_PLUGIN_INSTALL_DIR})
 
 endif()
