koodf2 no longer needs KDELibs4Support

--- a/filters/libodf2/CMakeLists.txt
+++ b/filters/libodf2/CMakeLists.txt
@@ -55,8 +55,13 @@ set(koodf2_LIB_SRCS
 add_library(koodf2 SHARED ${koodf2_LIB_SRCS})
 generate_export_header(koodf2 BASE_NAME koodf2)
 
-target_link_libraries(koodf2 koodf mso KF5::KIOWidgets KF5::KDELibs4Support Qt5::Xml)
-target_link_libraries(koodf2 LINK_INTERFACE_LIBRARIES KF5::KIOWidgets)
+target_link_libraries(koodf2
+    PUBLIC
+        koodf
+    PRIVATE
+        mso
+        Qt5::Xml
+)
 
 set_target_properties(koodf2 PROPERTIES
     VERSION ${GENERIC_CALLIGRA_LIB_VERSION} SOVERSION ${GENERIC_CALLIGRA_LIB_SOVERSION}
