Use AsciiExportDebug instead of kdebug in calligra_filter_odt2ascii

--- a/filters/words/ascii/CMakeLists.txt
+++ b/filters/words/ascii/CMakeLists.txt
@@ -27,6 +27,7 @@ include_directories(
 )
 
 set(odt2ascii_PART_SRCS
+    AsciiExportDebug.cpp
     AsciiExport.cpp
     OdtReaderAsciiBackend.cpp
     OdfReaderAsciiContext.cpp
