Use WikiExportDebug instead of kdebug in calligra_filter_odt2wiki

--- a/filters/words/wiki/export/CMakeLists.txt
+++ b/filters/words/wiki/export/CMakeLists.txt
@@ -5,6 +5,7 @@ include_directories(
 )
 
 set(odt2wiki_PART_SRCS
+    WikiExportDebug.cpp
     WikiExport.cpp
     OdtReaderWikiBackend.cpp
     OdfReaderWikiContext.cpp
