Use DocxExportDebug instead of kdebug in calligra_filter_odt2docx

--- a/filters/words/docx/export/CMakeLists.txt
+++ b/filters/words/docx/export/CMakeLists.txt
@@ -6,6 +6,7 @@ include_directories(
 )
 
 set(Odt2Docx_PART_SRCS
+    DocxExportDebug.cpp
     DocxExport.cpp
     DocxStyleWriter.cpp
     DocxStyleHelper.cpp
