Use ThreedDebug instead of kdebug in calligra_shape_threed

--- a/plugins/staging/threedshape/CMakeLists.txt
+++ b/plugins/staging/threedshape/CMakeLists.txt
@@ -5,6 +5,7 @@ include_directories( ${FLAKE_INCLUDES} )
 ########### Flake Plugin library ###############
 
 set (threedshape_LIB_SRCS
+    ThreedDebug.cpp
     ThreedShapePlugin.cpp
     ThreedShapeFactory.cpp
     #ThreedToolFactory.cpp
