--- a/plugins/staging/threedshape/CMakeLists.txt
+++ b/plugins/staging/threedshape/CMakeLists.txt
@@ -21,5 +21,5 @@ set (threedshape_LIB_SRCS
 add_library(calligra_shape_threed MODULE ${threedshape_LIB_SRCS})
 kcoreaddons_desktop_to_json(calligra_shape_threed calligra_shape_threed.desktop)
 
-target_link_libraries(calligra_shape_threed flake KF5::KDELibs4Support)
+target_link_libraries(calligra_shape_threed flake)
 install(TARGETS calligra_shape_threed DESTINATION ${CALLIGRA_PLUGIN_INSTALL_DIR})
