Use StencilBoxDebug instead of kdebug in karbon_stencilbox

--- a/karbon/plugins/stencilbox/CMakeLists.txt
+++ b/karbon/plugins/stencilbox/CMakeLists.txt
@@ -1,6 +1,7 @@
 include_directories(${KOMAIN_INCLUDES} ${FLAKE_INCLUDES})
 
 set(karbon_stencilbox_PART_SRCS
+    StencilBoxDebug.cpp
     StencilBoxPlugin.cpp
     StencilBoxDocker.cpp
     StencilListView.cpp
