calligra_filter_doc2odt no longer needs KDELibs4Support

--- a/filters/words/msword-odf/CMakeLists.txt
+++ b/filters/words/msword-odf/CMakeLists.txt
@@ -22,7 +22,7 @@ kde_enable_exceptions()
 add_library(calligra_filter_doc2odt MODULE ${doc2odt_PART_SRCS})
 kcoreaddons_desktop_to_json(calligra_filter_doc2odt calligra_filter_doc2odt.desktop)
 
-target_link_libraries(calligra_filter_doc2odt kowv2 komain mso ${ZLIB_LIBRARIES} KF5::KDELibs4Support)
+target_link_libraries(calligra_filter_doc2odt kowv2 komain mso ${ZLIB_LIBRARIES})
 
 install(TARGETS calligra_filter_doc2odt  DESTINATION ${CALLIGRA_PLUGIN_INSTALL_DIR})
 
