komsooxml no longer needs KDELibs4Support

--- a/filters/words/docx/import/CMakeLists.txt
+++ b/filters/words/docx/import/CMakeLists.txt
@@ -37,6 +37,7 @@ target_link_libraries(
     koodf2
     koodf
     komain
+    KF5::KDELibs4Support
 )
 
 install(TARGETS calligra_filter_docx2odt DESTINATION ${CALLIGRA_PLUGIN_INSTALL_DIR})
