Use DocxDebug instead of kdebug in calligra_filter_docx2odt

--- a/filters/words/docx/import/CMakeLists.txt
+++ b/filters/words/docx/import/CMakeLists.txt
@@ -11,6 +11,7 @@ include_directories(
 ########### next target ###############
 
 set(docx2odt_PART_SRCS
+    DocxDebug.cpp
     DocxXmlStylesReader.cpp
     DocxXmlFontTableReader.cpp
     DocxXmlCommentsReader.cpp
