Use PptxDebug instead of kdebug in calligra_filter_pptx2odp

--- a/filters/stage/pptx/CMakeLists.txt
+++ b/filters/stage/pptx/CMakeLists.txt
@@ -11,6 +11,7 @@ include_directories(
 ########### next target ###############
 
 set(pptx2odp_PART_SRCS
+    PptxDebug.cpp
     PptxImport.cpp
     PptxXmlDocumentReader.cpp
     PptxXmlSlideReader.cpp
