karboncommon no longer needs KDELibs4Support

--- a/filters/karbon/image/CMakeLists.txt
+++ b/filters/karbon/image/CMakeLists.txt
@@ -12,6 +12,6 @@ ki18n_wrap_ui( karbon2image_PART_SRCS ImageExportOptionsWidget.ui )
 add_library(calligra_filter_karbon2image MODULE ${karbon2image_PART_SRCS})
 kcoreaddons_desktop_to_json(calligra_filter_karbon2image calligra_filter_karbon2image.desktop)
 
-target_link_libraries(calligra_filter_karbon2image karbonui komain)
+target_link_libraries(calligra_filter_karbon2image karbonui komain KF5::KDELibs4Support)
 
 install(TARGETS calligra_filter_karbon2image  DESTINATION ${CALLIGRA_PLUGIN_INSTALL_DIR})
