--- a/filters/karbon/karbon1.x/CMakeLists.txt
+++ b/filters/karbon/karbon1.x/CMakeLists.txt
@@ -12,7 +12,7 @@ set(karbon1x2karbon_PART_SRCS Karbon1xImport.cpp)
 add_library(calligra_filter_karbon1x2karbon MODULE ${karbon1x2karbon_PART_SRCS})
 kcoreaddons_desktop_to_json(calligra_filter_karbon1x2karbon calligra_filter_karbon1x2karbon.desktop)
 
-target_link_libraries(calligra_filter_karbon1x2karbon karboncommon)
+target_link_libraries(calligra_filter_karbon1x2karbon karboncommon KF5::KDELibs4Support)
 
 install(TARGETS calligra_filter_karbon1x2karbon DESTINATION ${CALLIGRA_PLUGIN_INSTALL_DIR})
 
