Use KarbonUiDebug instead of kdebug for karbonui lib

--- a/karbon/ui/CMakeLists.txt
+++ b/karbon/ui/CMakeLists.txt
@@ -10,6 +10,7 @@ include_directories(
 )
 
 set(karbonui_SRCS
+    KarbonUiDebug.cpp
     KarbonFactory.cpp
     KarbonDocument.cpp
     KarbonPart.cpp
