--- a/plugins/videoshape/CMakeLists.txt
+++ b/plugins/videoshape/CMakeLists.txt
@@ -40,9 +40,6 @@ ki18n_wrap_ui(videoshape_LIB_SRCS forms/VideoToolWidget.ui)
 add_library(calligra_shape_video MODULE ${videoshape_LIB_SRCS})
 kcoreaddons_desktop_to_json(calligra_shape_video calligra_shape_video.desktop)
 
-target_link_libraries(calligra_shape_video flake kowidgets
-    KF5::KDELibs4Support
-    ${PHONON_LIBS}
-)
+target_link_libraries(calligra_shape_video flake kowidgets KF5::KIOFileWidgets ${PHONON_LIBS})
 
 install(TARGETS calligra_shape_video DESTINATION ${CALLIGRA_PLUGIN_INSTALL_DIR})
