Use WmfImportDebug instead of kDebug in calligra_filter_wmf2svg

--- a/filters/karbon/wmf/CMakeLists.txt
+++ b/filters/karbon/wmf/CMakeLists.txt
@@ -5,6 +5,7 @@ include_directories( ${VECTORIMAGE_INCLUDES} )
 if(SHOULD_BUILD_FILTER_WMF_TO_SVG)
 
 set(wmf2svg_PART_SRCS
+    WmfImportDebug.cpp
     WmfImport.cpp
     WmfImportParser.cpp
 )
