--- a/words/part/tests/CMakeLists.txt
+++ b/words/part/tests/CMakeLists.txt
@@ -1,6 +1,6 @@
 set( EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR} )
 
-include_directories(${KOTEXT_INCLUDES} ${KDE4_INCLUDES}
+include_directories(${KOTEXT_INCLUDES}
         ${CMAKE_SOURCE_DIR}/libs/flake/tests
         ${CMAKE_BINARY_DIR}/libs/main
         ${CMAKE_SOURCE_DIR}/libs/kotext/tests
