--- a/extras/calligra/CMakeLists.txt
+++ b/extras/calligra/CMakeLists.txt
@@ -7,6 +7,6 @@ set(calligra_SRCS
 
 add_executable(calligra ${calligra_SRCS})
 
-target_link_libraries(calligra komain ${KDE4_KIO_LIBS})
+target_link_libraries(calligra komain KF5::KDELibs4Support)
 
 install(TARGETS calligra ${INSTALL_TARGETS_DEFAULT_ARGS})
