Align cmake install vars used in Karbon with rest of Calligra

--- a/karbon/CMakeLists.txt
+++ b/karbon/CMakeLists.txt
@@ -49,11 +49,11 @@ endif()
 set(karbon_KDEINIT_SRCS main.cpp )
 
 file(GLOB karbon_icons "${CMAKE_CURRENT_SOURCE_DIR}/pics/action/*-actions-*.png")
-ecm_install_icons(ICONS ${karbon_icons} DESTINATION ${KDE_INSTALL_DATADIR}/karbon/icons)
+ecm_install_icons(ICONS ${karbon_icons} DESTINATION ${DATA_INSTALL_DIR}/karbon/icons)
 
 file(GLOB karbon_app_icons "${CMAKE_CURRENT_SOURCE_DIR}/pics/app/*-apps-calligrakarbon.png")
 ecm_add_app_icon(karbon_KDEINIT_SRCS ICONS ${karbon_app_icons})
-ecm_install_icons(ICONS ${karbon_app_icons} DESTINATION ${KDE_INSTALL_ICONDIR})
+ecm_install_icons(ICONS ${karbon_app_icons} DESTINATION ${ICON_INSTALL_DIR})
 
 kf5_add_kdeinit_executable( karbon ${karbon_KDEINIT_SRCS})
 
@@ -65,8 +65,8 @@ endif()
 
 target_link_libraries(kdeinit_karbon karbonui)
 
-install(TARGETS kdeinit_karbon  ${KDE_INSTALL_TARGETS_DEFAULT_ARGS})
+install(TARGETS kdeinit_karbon  ${INSTALL_TARGETS_DEFAULT_ARGS})
 
 target_link_libraries(karbon kdeinit_karbon)
-install(TARGETS karbon  ${KDE_INSTALL_TARGETS_DEFAULT_ARGS})
+install(TARGETS karbon  ${INSTALL_TARGETS_DEFAULT_ARGS})
 
