--- a/karbon/plugins/flattenpath/CMakeLists.txt
+++ b/karbon/plugins/flattenpath/CMakeLists.txt
@@ -17,4 +17,4 @@ install(TARGETS karbon_flattenpath  DESTINATION ${CALLIGRA_PLUGIN_INSTALL_DIR})
 
 ########### install files ###############
 
-install( FILES  FlattenPathPlugin.rc  DESTINATION ${KDE_INSTALL_DATADIR}/karbon/plugins)
+install( FILES  FlattenPathPlugin.rc  DESTINATION ${DATA_INSTALL_DIR}/karbon/plugins)
