--- a/karbon/plugins/refinepath/CMakeLists.txt
+++ b/karbon/plugins/refinepath/CMakeLists.txt
@@ -12,4 +12,4 @@ install(TARGETS karbon_refinepath  DESTINATION ${CALLIGRA_PLUGIN_INSTALL_DIR})
 
 ########### install files ###############
 
-install( FILES RefinePathPlugin.rc  DESTINATION ${KDE_INSTALL_DATADIR}/karbon/plugins)
+install( FILES RefinePathPlugin.rc  DESTINATION ${DATA_INSTALL_DIR}/karbon/plugins)
