--- a/karbon/plugins/roundcorners/CMakeLists.txt
+++ b/karbon/plugins/roundcorners/CMakeLists.txt
@@ -19,4 +19,4 @@ install(TARGETS karbon_roundcorners  DESTINATION ${CALLIGRA_PLUGIN_INSTALL_DIR})
 
 ########### install files ###############
 
-install( FILES  RoundCornersPlugin.rc  DESTINATION ${KDE_INSTALL_DATADIR}/karbon/plugins)
+install( FILES  RoundCornersPlugin.rc  DESTINATION ${DATA_INSTALL_DIR}/karbon/plugins)
