--- a/karbon/templates/basic/CMakeLists.txt
+++ b/karbon/templates/basic/CMakeLists.txt
@@ -1,7 +1,7 @@
 
-install( FILES  empty.odg  DESTINATION ${KDE_INSTALL_DATADIR}/karbon/templates/Basic/.source)
-install( FILES  .directory empty.desktop  DESTINATION ${KDE_INSTALL_DATADIR}/karbon/templates/Basic)
+install( FILES  empty.odg  DESTINATION ${DATA_INSTALL_DIR}/karbon/templates/Basic/.source)
+install( FILES  .directory empty.desktop  DESTINATION ${DATA_INSTALL_DIR}/karbon/templates/Basic)
 
 file(GLOB karbon_template_icons "${CMAKE_CURRENT_SOURCE_DIR}/*-actions-*.png")
-ecm_install_icons(ICONS ${karbon_template_icons} DESTINATION ${KDE_INSTALL_DATADIR}/karbon/icons)
+ecm_install_icons(ICONS ${karbon_template_icons} DESTINATION ${DATA_INSTALL_DIR}/karbon/icons)
 
