--- a/qtquick/CMakeLists.txt
+++ b/qtquick/CMakeLists.txt
@@ -74,7 +74,7 @@ include_directories(
     ${CMAKE_SOURCE_DIR}/libs/kopageapp
 )
 
-kde4_add_library(calligraqtquickcomponentsplugin SHARED ${calligraqtquickcomponents_SRCS})
+add_library(calligraqtquickcomponentsplugin SHARED ${calligraqtquickcomponents_SRCS})
 
 target_link_libraries(calligraqtquickcomponentsplugin
     Qt5::Declarative
