macro_add_compile_flags -> set_target_properties

--- a/extras/thumbnail/CMakeLists.txt
+++ b/extras/thumbnail/CMakeLists.txt
@@ -11,7 +11,7 @@ install(TARGETS calligrathumbnail  DESTINATION ${PLUGIN_INSTALL_DIR})
 if( SHOULD_BUILD_APP_FLOW OR SHOULD_BUILD_APP_KARBON )
     set(calligraimagethumbnail_SRCS calligracreator.cpp)
     add_library(calligraimagethumbnail MODULE ${calligraimagethumbnail_SRCS})
-    macro_add_compile_flags(calligraimagethumbnail "-DNO_ICON_BLENDING")
+    set_target_properties(calligraimagethumbnail PROPERTIES COMPILE_FLAGS "-DNO_ICON_BLENDING")
     target_link_libraries(calligraimagethumbnail komain KF5::KIOWidgets)
     install(TARGETS calligraimagethumbnail  DESTINATION ${PLUGIN_INSTALL_DIR})
 endif()
