calligraconverter no longer needs KDELibs4Support

--- a/extras/converter/CMakeLists.txt
+++ b/extras/converter/CMakeLists.txt
@@ -4,7 +4,7 @@ set(calligraconverter_SRCS calligraconverter.cpp)
 
 add_executable(calligraconverter ${calligraconverter_SRCS})
 
-target_link_libraries(calligraconverter komain KF5::KDELibs4Support)
+target_link_libraries(calligraconverter komain)
 
 install(TARGETS calligraconverter ${INSTALL_TARGETS_DEFAULT_ARGS})
 
