calligra-open no longer needs KDELibs4Support

--- a/extras/calligra/CMakeLists.txt
+++ b/extras/calligra/CMakeLists.txt
@@ -6,6 +6,6 @@ set(calligra_SRCS
 
 add_executable(calligra ${calligra_SRCS})
 
-target_link_libraries(calligra komain KF5::KDELibs4Support)
+target_link_libraries(calligra komain KF5::Service KF5::KIOWidgets KF5::WidgetsAddons)
 
 install(TARGETS calligra ${INSTALL_TARGETS_DEFAULT_ARGS})
