Connect lazy frame  on/off  icons by Timothee Giet

--- a/krita/pics/CMakeLists.txt
+++ b/krita/pics/CMakeLists.txt
@@ -57,6 +57,8 @@ dark_timeline_keyframe.png
 dark_onion_skin_options.png
 dark_onionOn.svg
 dark_onionOff.svg
+dark_lazyframeOn.png
+dark_lazyframeOff.png
 
 light_prevframe.png
 light_nextframe.png
@@ -73,6 +75,8 @@ light_timeline_keyframe.png
 light_onion_skin_options.png
 light_onionOn.svg
 light_onionOff.svg
+light_lazyframeOn.png
+light_lazyframeOff.png
 
 mirrorAxis-HorizontalMove.png
 mirrorAxis-VerticalMove.png
