Give KoSharedLoadingData a publicly visible ctor and dtor in its own implementation file to avoid this system.log error on OS X: "calligrastage: dynamic_cast error 1: Both of the following type_info's should have public visibility.  At least one of them is hidden. 19KoSharedLoadingData, 23KoTextSharedLoadingData."

--- a/libs/flake/CMakeLists.txt
+++ b/libs/flake/CMakeLists.txt
@@ -98,6 +98,7 @@ set(flake_SRCS
     KoSnapData.cpp
     SnapGuideConfigWidget.cpp
     KoShapeShadow.cpp
+    KoSharedLoadingData.cpp
     KoSharedSavingData.cpp
     KoViewConverter.cpp
     KoInputDeviceHandler.cpp
